# bellwright-gold-editor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: save_format.md
src/: lib.rs  main.rs
